Various fix and refactoring.